# some_obsidian_some_mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: bump_version.py  release.sh
src/some_vault_some_mcp/: __init__.py  cli.py  config.py  models.py  server.py
src/some_vault_some_mcp/core/: __init__.py  atomic_write.py  canvas.py  chunker.py  dates.py  embeddings.py  filters.py  frontmatter.py  indexer.py  paths.py  watcher.py  wikilinks.py
src/some_vault_some_mcp/tools/: canvas.py  daily.py  index.py  links.py  read.py  search.py  tags.py  write.py
tests/e2e/: test_docker.py
tests/fixtures/: lancedb_schema.json
tests/fixtures/vault/: large-note.md  linked-note.md  no-frontmatter.md  simple.md  test-canvas.canvas
tests/fixtures/vault/.obsidian/: daily-notes.json
tests/fixtures/vault/.trash/: deleted.md
tests/fixtures/vault/daily/: 2026-05-08.md
tests/fixtures/vault/projects/alpha/: deep-note.md
tests/integration/: test_indexer.py  test_list_notes_filter.py  test_overrides.py  test_semantic_search.py
tests/unit/: test_atomic_write.py  test_canvas_core.py  test_canvas_tools.py  test_chunker.py  test_config.py  test_daily_tools.py  test_dates.py  test_dimension_check.py  test_embeddings.py  test_exact_search.py  test_frontmatter.py  test_indexer_lock.py  test_links_tools.py  test_paths.py  test_search_scoring.py  test_tool_gating.py  test_watcher.py  test_wikilinks.py  test_write_tools.py
